--- a/Part-1_Data_Scraping_&_Cleaning.ipynb
+++ b/Part-1_Data_Scraping_&_Cleaning.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Film production is a huge financial risk. Currently, blockbuster movies can have budgets in excess of of hundreds of millions of dollars. This risk could be reduced to an extent with the use of quantitative modeling. Since movie scripts are pitched and budgets are set and spent well before any revenue is ever made, we plan to construct a predictive model using features that are generally known before the movie release date such as the movie length, budget, and genre."
+    "Film production is a huge financial risk. Currently, blockbuster movies can have budgets in excess of hundreds of millions of dollars. This risk could be reduced to an extent with the use of quantitative modeling. Since movie scripts are pitched and budgets are set and spent well before any revenue is ever made, we plan to construct a predictive model using features that are generally known before the movie release date such as the movie length, budget, and genre."
    ]
   },
   {
