--- a/Part-2_Data_Modeling.ipynb
+++ b/Part-2_Data_Modeling.ipynb
@@ -251,7 +251,7 @@
     }
    ],
    "source": [
-    "movie_dataframes=pd.read_csv('/Users/chaudhary/Downloads/Project-2/movie_dataframe_completemovies_clean.csv')\n",
+    "movie_dataframes=pd.read_csv('.../movie_dataframe_completemovies_clean.csv')\n",
     "movie_dataframes=movie_dataframes.drop(columns='Unnamed: 0')\n",
     "movie_dataframes.head()"
    ]
